--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,10 +8,10 @@
 :root{
   --Primary-Color : #FF9500;
   --main-color : #262626;
-  --main-color : #F1F1F3;
+  --main-bg-color : #F1F1F3;
 }
 body{
-  background-color: var(--main-color);
+  background-color: var(--main-bg-color);
 }
 header{
   margin: 20px 30px;
@@ -91,7 +91,7 @@ header hr {
 }
 .icon1{
   position: absolute;
-  left: 48px;
+  left: 30px;
   top: -11%;
 }
 
@@ -103,28 +103,28 @@ header hr {
   border-radius: 11px;
   font-weight: 600;
   font-size: 48px;
-  color: #111827;
+  color: #1A1A1A;
 }
 
 .badge .highlight {
-  color: #f59e0b; /* Orange color */
+  color: var(--Primary-Color); /* Orange color */
   margin-right: 5px;
 }
 .badge .icon{
-  width: 10px;
-  height: 10px;
+  padding: 8px 16px;
+  border-radius: 6px;
   background-color: #FFF4E5;
 }
 
 .main-heading {
-  font-size: 28px;
+  font-size: 35px;
   font-weight: 600;
   margin: 20px 0 10px;
-  color: #111827;
+  color: var(--main-color);
 }
 
 .subtext {
-  color: #6b7280;
+  color: var(--main-color);
   font-size: 16px;
   margin-bottom: 30px;
 }
@@ -145,7 +145,7 @@ header hr {
 }
 
 .btn-primary {
-  background-color: #f59e0b;
+  background-color: var(--Primary-Color);
   color: #fff;
 }
 
@@ -154,12 +154,34 @@ header hr {
 }
 
 .btn-outline {
-  border: 2px solid #d1d5db;
   color: #111827;
-  background-color: transparent;
+  background-color: #FCFCFD;
 }
 
 .btn-outline:hover {
   background-color: #f9fafb;
 }
 
+.logo-carousel{
+  display: flex;
+  justify-content: center;
+  background-color: #FCFCFD;
+  padding: 30px;
+  margin: 0 35px;
+  border-radius: 12px;
+}
+.logo-carousel .logos{
+  padding: 15px 35px;
+  border-right: 1px solid #e1dcdc83; 
+  height: 75%;
+  background-color: #FCFCFD;
+}
+.image{
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+.image img{
+  width: 1200px;
+
+}
