--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -182,6 +182,88 @@ header hr {
   margin: 30px;
 }
 .image img{
-  width: 1200px;
+  width: 1350px;
 
 }
+.Benefits > div{
+  display: flex;
+  margin: 35px 35px;
+  font-size: 40px;
+  color: var(--main-color);
+}
+.Benefits > div .Lorem{
+  color: #59595A;
+  font-size: 18px;
+  width: 70%;
+}
+.link-Benefits{
+  width: 200px;
+  display: flex;
+  align-items: end;
+}
+.Benefits a{
+  background-color: #FCFCFD;
+  text-decoration: none;
+  color: var(--main-color);
+  border-radius: 8px;
+  padding: 15px 20px;
+  font-size: 16px;
+  display: inline-block;
+}
+.Benefits a:hover{
+  background-color: #dfdfe0;
+}
+
+.Features{
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  width: 430px;
+  height: 350px;
+  background-color: #FCFCFD;
+  
+}
+.Features a{
+  align-self: flex-end;
+  background-color: #FCFCFD;
+}
+
+.Features p{
+  color: #59595A;
+  font-size: 18px;
+  margin: 10px 35px;
+  width: 75%;
+}
+.Features .number {
+  align-self: flex-end;
+  width: 65px;
+  height: 50px;
+  margin: 40px;
+}
+.Arrow{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 40px;
+  border: 1px solid #F1F1F3;
+}
+.Features .Arrow img{
+  position: absolute;
+  top: 8px;
+  right: 11px;
+}
+.Features h3{
+  font-size: 20px;
+  margin: 0px 35px;
+}
+
+.boxses{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
+
