--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,7 +43,7 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
-nav .logo {
+.logo {
   background-color: var(--Primary-Color);
   padding: 10px;
   margin-right: 50px;
@@ -52,6 +52,7 @@ nav .logo {
 }
 nav .navigation {
   display: flex;
+  flex-wrap: wrap;
 }
 nav .login {
   display: flex;
@@ -62,6 +63,7 @@ nav ul li {
   align-items: center;
   list-style: none;
   margin-right: 25px;
+  margin-bottom: 5px;
 }
 ul li a {
   color: #262626;
@@ -93,6 +95,12 @@ header hr {
   position: absolute;
   left: 30px;
   top: -11%;
+}
+
+@media (max-width: 1024px) {
+  .icon1 {
+    display: none;
+  }
 }
 
 .badge {
@@ -165,6 +173,7 @@ header hr {
 .logo-carousel {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   background-color: #fcfcfd;
   padding: 30px;
   margin: 0 35px;
@@ -199,6 +208,13 @@ header hr {
   width: 200px;
   display: flex;
   align-items: end;
+}
+@media (max-width: 1024px) {
+  .Benefits > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .Benefits a {
   background-color: #fcfcfd;
@@ -263,12 +279,13 @@ header hr {
   flex-wrap: wrap;
   gap: 10px;
 }
-.Our_Courses{
+.Our_Courses {
   display: flex;
+
   justify-content: space-between;
   margin: 35px 35px 50px 35px;
 }
-.Our_Courses h2{
+.Our_Courses h2 {
   font-size: 40px;
   color: var(--main-color);
 }
@@ -277,12 +294,12 @@ header hr {
   font-size: 18px;
   width: 70%;
 }
-.courses-wrapper{
+.courses-wrapper {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.courses{
+.courses {
   display: flex;
   justify-content: center;
   margin: 10px 10px;
@@ -290,56 +307,74 @@ header hr {
   background-color: #fff;
   width: 600px;
   border-radius: 12px;
-  border: 1px solid #F1F1F3;
+  border: 1px solid #f1f1f3;
 }
-.course{
+.course {
   width: 550px;
 }
-.course div{
+.course div {
   display: flex;
   justify-content: space-between;
-  
 }
-.course img{
+.course img {
   width: 550px;
 }
-.course div div{
-  display: flex ;
+.course div div {
+  display: flex;
 }
-.info{
+.info {
   display: flex;
   justify-content: space-between;
   margin: 25px 0;
 }
-.info div p{
+.info div p {
   padding: 10px;
-  border: 1px solid #F1F1F3;
+  border: 1px solid #f1f1f3;
   border-radius: 8px;
   margin-right: 10px;
 }
 
 .course h3 {
   color: var(--main-color);
-  margin-bottom: 10px ;
+  margin-bottom: 10px;
 }
-.course p{
-  color: #4C4C4D;
+.course p {
+  color: #4c4c4d;
 }
-.course .by{
+.course .by {
   color: #262626;
   padding: 10px 0;
 }
-.course a{
+.course a {
   display: inline-block;
   text-align: center;
   padding: 14px;
   margin: 25px 0 0 0;
   width: 100%;
-  background-color: #F7F7F8;
+  background-color: #f7f7f8;
   color: var(--main-color);
   text-decoration: none;
 }
-.Testimonials{
+
+@media (max-width: 1024px) {
+  .Our_Courses{
+    flex-wrap: wrap;
+  }
+  .courses-wrapper {
+    overflow: hidden;
+  }
+  .course {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .course img {
+    width: 450px;
+  }
+}
+.Testimonials {
   background-color: #ffffff;
   width: 600px;
   margin: 10px;
@@ -347,37 +382,658 @@ header hr {
 }
 .Testimonials p {
   color: #333333;
-  padding: 40px ;
+  padding: 40px;
 }
-.clint{
-  color: #4C4C4D;
+.clint {
+  color: #4c4c4d;
 }
-.Testimonials .div-clint{
-  border-top: 1px solid #F1F1F3;
+.Testimonials .div-clint {
+  border-top: 1px solid #f1f1f3;
 }
-.Testimonials div{
+.Testimonials div {
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   text-align: center;
   align-items: center;
-  background-color: #FCFCFD;
-
-
+  background-color: #fcfcfd;
 }
-.Testimonials img{
+.Testimonials img {
   margin: 0 5px 0 0;
 }
-.Testimonials a{
+.Testimonials a {
   color: #262626;
   text-decoration: none;
-  background-color: #F7F7F8;
-  border: 1px solid #F1F1F3;
+  background-color: #f7f7f8;
+  border: 1px solid #f1f1f3;
   border-radius: 8px;
   padding: 13px;
 }
-.testimonials-wrapper{
+.testimonials-wrapper {
   display: flex;
-  flex-wrap:  wrap;
+  flex-wrap: wrap;
   justify-content: center;
 }
+
+.sub {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin-top: 40px;
+  margin-right: 40px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  height: 55px;
+}
+.sub a {
+  padding: 8px;
+  text-decoration: none;
+  margin: 8px;
+}
+.sub .Monthly {
+  color: #ffffff;
+  background-color: #ff9500;
+  border-radius: 8px;
+}
+.sub .Yearly {
+  color: #111827;
+}
+.pricing-card_header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  background-color: #ffffff;
+  width: 87%;
+  border-radius: 12px;
+}
+
+.pricing-card {
+  background-color: #fcfcfd;
+  width: 480px;
+  margin: 30px;
+  padding: 30px;
+  text-align: center;
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+}
+.pricing-card ul {
+  text-align: start;
+  padding: 20px;
+}
+.pricing-card ul li {
+  list-style-type: none;
+  margin: 10px;
+  padding: 10px;
+  color: #4c4c4d;
+  border: 1px solid #f1f1f3;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.pricing-card ul li img {
+  padding-right: 10px;
+}
+.features {
+  background-color: #ffffff;
+  border: 1px solid #f1f1f3;
+}
+.pricing-card .Plan {
+  color: var(--main-color);
+  background-color: #fff9f0;
+  padding: 10px;
+  font-weight: 500;
+  border: 1px solid #ffeacc;
+  border-radius: 5px;
+}
+
+.price {
+  font-size: 48px;
+  font-weight: 700;
+  margin: 30px;
+}
+
+.price span {
+  font-size: 16px;
+  font-weight: 400;
+  color: #666;
+}
+.features h4 {
+  margin-top: 30px;
+  color: var(--main-color);
+}
+.pricing-card a {
+  color: var(--main-color);
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #ff9500;
+  display: block;
+  padding: 18px;
+  width: 100%;
+}
+
+.Asked {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: #ffffff;
+  width: 90%;
+  padding: 60px;
+  margin: 60px auto;
+  border-radius: 12px;
+}
+
+.Asked > div:first-child {
+  flex: 1;
+  padding-right: 40px;
+}
+
+.Asked h3 {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: var(--main-color);
+}
+
+.Asked p {
+  color: var(--main-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.Asked a {
+  display: inline-block;
+  margin-top: 25px;
+  padding: 10px 18px;
+  background-color: white;
+  border: 1px solid #f1f1f3;
+  border-radius: 8px;
+  font-size: 14px;
+  text-decoration: none;
+  color: var(--main-color);
+  transition: all 0.3s ease;
+}
+
+.Asked a:hover {
+  background-color: #f0f0f0;
+}
+
+.Asked > div:last-child {
+  flex: 1.5;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.quies {
+  border: 1px solid #f1f1f3;
+  color: var(--main-color);
+  border-radius: 10px;
+  padding: 16px 20px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  transition: box-shadow 0.2s ease;
+}
+
+.quies:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+}
+
+.quies img {
+  width: 40px;
+  height: 40px;
+}
+
+.Asked > div:last-child > p {
+  margin: 0 0 0 10px;
+  padding: 10px 0 0 0;
+  font-size: 14px;
+  color: var(--main-color);
+}
+
+.Asked > div:last-child > .quies + p + .quies {
+  background-color: #f7f7f8;
+  border: 1px solid #f1f1f3;
+  margin: 10px 0;
+}
+
+.absolutely {
+  border-radius: 10px;
+  padding: 16px 20px;
+  font-size: 14px;
+  color: #4c4c4c !important;
+  line-height: 1.6;
+}
+
+.footer-section {
+  background-color: #fff;
+  padding: 100px 90px 20px 90px;
+  flex-wrap: wrap;
+  color: var(--main-color);
+}
+
+.footer-section > div:first-child {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.footer-section .Connect,
+.footer-section .Home,
+.footer-section .About,
+.footer-section .Social {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+}
+.footer-section .Connect {
+  margin-right: 150px;
+}
+
+.footer-section .Connect > img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.footer-section .Connect > div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--main-color);
+}
+
+.footer-section .Home p,
+.footer-section .About p {
+  color: var(--main-color);
+  cursor: pointer;
+}
+
+.footer-section .Home p:first-child,
+.footer-section .About p:first-child,
+.footer-section .Social > p {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-section .Social {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-section .Social > div {
+  display: flex;
+  gap: 10px;
+}
+
+.footer-section .Social img {
+  background-color: #f7f7f8;
+  border: 1px solid #f1f1f3;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.footer-section > div:last-child {
+  text-align: center;
+  margin-top: 40px;
+  border-top: 1px solid #f1f1f3;
+  padding-top: 20px;
+  font-size: 14px;
+  color: #656567;
+}
+
+.intro {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  padding: 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.intro h2 {
+  flex: 1;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.3;
+  margin: 0;
+  color: var(--main-color);
+}
+
+.intro p {
+  flex: 2;
+  font-size: 16px;
+  color: #59595a;
+  line-height: 1.6;
+  margin: 0;
+}
+
+@media (max-width: 1024px) {
+  .intro {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .intro h2 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .intro p {
+    font-size: 14px;
+  }
+}
+
+.course-overview {
+  background: #fff;
+  padding: 40px;
+  border-radius: 12px;
+  max-width: 1150px;
+  margin: 40px auto;
+}
+
+.course-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 32px;
+  margin-bottom: 32px;
+}
+
+.course-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: var(--main-color);
+}
+
+.course-description {
+  color: #59595a;
+  max-width: 700px;
+}
+
+.view-course-btn {
+  background: #fcfcfd;
+  border: 1px solid #f1f1f3;
+  padding: 10px 18px;
+  border-radius: 8px;
+  text-decoration: none;
+  color: var(--main-color);
+  font-weight: 500;
+  transition: 0.3s ease;
+}
+
+.view-course-btn:hover {
+  background-color: #f3f4f6;
+}
+
+.course-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 30px;
+}
+
+.course-images img {
+  width: 100%;
+  max-width: 345px;
+  height: auto;
+  border-radius: 8px;
+}
+
+.course-meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 32px;
+  color: var(--main-color);
+}
+
+.course-details p {
+  color: #59595a;
+  display: inline-block;
+  border: 1px solid #f1f1f3;
+  padding: 5px 12px;
+  border-radius: 8px;
+  margin-right: 0.5rem;
+  font-size: 0.875rem;
+}
+
+.course-curriculum {
+  padding: 20px;
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+}
+
+.curriculum-title {
+  font-weight: bold;
+  margin-bottom: 16px;
+  font-size: 20px;
+}
+
+.curriculum-item {
+  display: inline-block;
+  width: 19%;
+  border: 1px solid #f1f1f3a9;
+  padding: 16px 0;
+  text-align: start;
+  vertical-align: top;
+}
+
+.lesson-number {
+  font-size: 32px;
+  font-weight: bold;
+  color: var(--main-color);
+}
+
+.lesson-title {
+  margin-top: 0.5rem;
+  font-size: 0.875rem;
+  color: #333333;
+}
+
+@media (max-width: 768px) {
+  .curriculum-item {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+}
+.image-ui img {
+  display: flex;
+  margin: auto;
+  width: 85%;
+}
+
+.courses-sec {
+  display: flex;
+  gap: 20px;
+  padding: 32px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.courses-sec .course-card {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 50px 32px;
+  width: 575px;
+}
+
+.courses-sec .course-number {
+  font-size: 70px;
+  font-weight: 700;
+  color: var(--main-color);
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+.courses-sec .course-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 24px;
+  color: #333333;
+}
+
+.courses-sec .lessons-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.courses-sec .lesson-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #f1f1f3;
+  border-radius: 6px;
+  padding: 16px 20px;
+}
+
+.courses-sec .lesson-box.active {
+  border-color: #ffd599;
+  box-shadow: 0 0 0 4px #fff4e5;
+}
+
+.courses-sec .lesson-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.courses-sec .lesson-title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #333333;
+  margin-bottom: 4px;
+}
+
+.courses-sec .lesson-number {
+  font-size: 13px;
+  color: #59595a;
+}
+
+.courses-sec .lesson-duration {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-size: 12px;
+  font-weight: 500;
+  background-color: #f7f7f8;
+  border-radius: 6px;
+  padding: 6px 10px;
+  color: #59595a;
+
+  width: 26%;
+}
+
+.courses-sec .lesson-box.active .lesson-duration {
+  background-color: #ffeacc;
+}
+.Achievements{
+  margin: 50px 0;
+}
+.Achievements h2 , .Achievements p{
+  margin: 20px 90px;
+}
+.Achievements h2{
+  font-size: 40px;
+  color: #333333;
+}
+.Achievements p{
+  font-size: 15px;
+  color: #59595A;
+}
+.crown {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.crown div{
+  padding: 20px;
+  border-radius: 12px;
+  width: 42%;
+  background-color: #ffffff;
+}
+.crown img{
+  width: 50px;
+  margin: 10px 0;
+}
+.crown h3{
+  color: var(--main-color);
+  font-size: 24px;
+  margin: 10px 0;
+}
+.crown p{
+  margin: 10px 0;
+  color: #59595A;
+}
+
+.section-container {
+  background-color: white;
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  border-radius: 12px;
+}
+
+.text-content {
+  max-width: 720px;
+}
+
+.text-content h2 {
+  font-size: 32px;
+  color: var(--main-color);
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
+.text-content h2 span {
+  color: #FF9500;
+}
+
+.text-content p {
+  color: #4C4C4D;
+}
+
+.btn {
+  background-color: #FF9500;
+  color: white;
+  padding: 14px 28px;
+  border: none;
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.btn:hover {
+  background-color: #71480b;
+}
+
+.sup{
+  display: flex;
+  justify-content: center;
+  margin: 30px auto;
+  width: 180px;
+}
+
+
+
