--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -74,6 +74,16 @@ ul li a {
   border-radius: 8px;
   background-color: var(--Primary-Color);
 }
+
+.active {
+  color: #4f46e5; /* لون مميز */
+  border-bottom: 2px solid #4f46e5; /* خط تحتي بسيط */
+}
+nav ul li a:hover {
+  color: #4f46e5;
+  border-bottom: 2px solid #4f46e5;
+}
+
 header hr {
   background-color: #f4f4f4;
   height: 0.1px;
@@ -357,7 +367,7 @@ header hr {
 }
 
 @media (max-width: 1024px) {
-  .Our_Courses{
+  .Our_Courses {
     flex-wrap: wrap;
   }
   .courses-wrapper {
@@ -934,26 +944,26 @@ header hr {
   border-radius: 6px;
   padding: 6px 10px;
   color: #59595a;
-
   width: 26%;
 }
 
 .courses-sec .lesson-box.active .lesson-duration {
   background-color: #ffeacc;
 }
-.Achievements{
+.Achievements {
   margin: 50px 0;
 }
-.Achievements h2 , .Achievements p{
+.Achievements h2,
+.Achievements p {
   margin: 20px 90px;
 }
-.Achievements h2{
+.Achievements h2 {
   font-size: 40px;
   color: #333333;
 }
-.Achievements p{
+.Achievements p {
   font-size: 15px;
-  color: #59595A;
+  color: #59595a;
 }
 .crown {
   display: flex;
@@ -962,24 +972,24 @@ header hr {
   gap: 20px;
   margin-bottom: 20px;
 }
-.crown div{
+.crown div {
   padding: 20px;
   border-radius: 12px;
   width: 42%;
   background-color: #ffffff;
 }
-.crown img{
+.crown img {
   width: 50px;
   margin: 10px 0;
 }
-.crown h3{
+.crown h3 {
   color: var(--main-color);
   font-size: 24px;
   margin: 10px 0;
 }
-.crown p{
+.crown p {
   margin: 10px 0;
-  color: #59595A;
+  color: #59595a;
 }
 
 .section-container {
@@ -1006,15 +1016,15 @@ header hr {
 }
 
 .text-content h2 span {
-  color: #FF9500;
+  color: #ff9500;
 }
 
 .text-content p {
-  color: #4C4C4D;
+  color: #4c4c4d;
 }
 
 .btn {
-  background-color: #FF9500;
+  background-color: #ff9500;
   color: white;
   padding: 14px 28px;
   border: none;
@@ -1028,12 +1038,357 @@ header hr {
   background-color: #71480b;
 }
 
-.sup{
+.sup {
   display: flex;
   justify-content: center;
   margin: 30px auto;
   width: 180px;
 }
 
+.sign-up-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
+.testimonials-section {
+  padding: 60px 20px 60px 100px;
+  width: 700px;
+}
 
+.testimonials-header {
+  max-width: 700px;
+  margin-bottom: 30px;
+}
+
+.testimonials-title {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  color: var(--main-color);
+}
+
+.testimonials-subtitle {
+  color: #59595a;
+  line-height: 1.6;
+}
+
+.testimonial-card {
+  background-color: white;
+  border-radius: 12px;
+  max-width: 700px;
+}
+
+.testimonial-text {
+  padding: 40px;
+  font-size: 16px;
+  color: #4c4c4d;
+  line-height: 1.6;
+}
+
+.testimonial-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 40px;
+  flex-wrap: wrap;
+}
+
+.testimonial-user {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.user-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 12px;
+}
+
+.user-name {
+  font-weight: bold;
+  color: #333333;
+}
+
+.read-more-btn {
+  background-color: #f7f7f8;
+  padding: 12px 20px;
+  border-radius: 8px;
+  text-decoration: none;
+  color: var(--main-color);
+  font-weight: 500;
+  transition: background 0.3s;
+}
+
+.read-more-btn:hover {
+  background-color: #e2e2e2;
+}
+
+.testimonial-nav {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+  margin-top: 30px;
+}
+
+.nav-btn {
+  background-color: white;
+  border: 1px solid #f1f1f3;
+  border-radius: 8px;
+  padding: 8px 10px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.nav-btn:hover {
+  background-color: #f0f0f0;
+}
+
+.login-container {
+  width: 500px;
+  margin: 50px 100px;
+  background-color: #ffffff;
+  padding: 40px 30px;
+  border-radius: 12px;
+}
+
+.login-title {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #333333;
+}
+
+.login-subtitle {
+  text-align: center;
+  font-size: 14px;
+  color: #4c4c4d;
+  margin-bottom: 30px;
+}
+
+.input-label {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 6px;
+  color: var(--main-color);
+}
+
+.input-field {
+  width: 100%;
+  padding: 16px;
+  border: 1px solid #f1f1f3;
+  border-radius: 10px;
+  font-size: 14px;
+  outline: none;
+  margin-bottom: 25px;
+  background-color: #fcfcfd;
+}
+
+.options-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 35px;
+  font-size: 14 px;
+}
+
+.remember-me {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #656567;
+}
+
+.forgot-password {
+  margin-top: 40px;
+  color: #4c4c4c;
+  text-decoration: none;
+}
+
+.login-button {
+  width: 100%;
+  background-color: var(--Primary-Color);
+  color: white;
+  border: none;
+  padding: 14px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 25px;
+}
+
+.login-button:hover {
+  background-color: #e28500;
+}
+
+.divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
+  font-size: 13px;
+  color: #98989a;
+}
+
+.divider::before,
+.divider::after {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background-color: #e4e4e7;
+  margin: 0 10px;
+}
+
+.google-button {
+  color: var(--main-color);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border: none;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.google-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.signup-text {
+  text-align: center;
+  font-size: 13px;
+  color: var(--main-color);
+}
+.row-top {
+  width: 12px;
+  margin-left: 5px;
+}
+
+.signup-link {
+  font-weight: 500;
+  text-decoration: underline;
+  color: var(--main-color);
+  margin-left: 5px;
+}
+.agree {
+  color: #656567;
+  font-size: 14px;
+}
+.agree span {
+  text-decoration: underline;
+}
+
+.contai {
+  display: flex;
+  max-width: 1100px;
+  margin: 50px auto;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 40px;
+  gap: 40px;
+}
+
+.form-section {
+  flex: 2;
+}
+
+form .row {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.form-group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group label {
+  font-weight: 500;
+  margin-bottom: 8px;
+  color: var(--main-color);
+}
+
+.form-group input,
+.form-group textarea {
+  padding: 14px;
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  background-color: #fcfcfd;
+  outline: none;
+  transition: border 0.3s;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  border-color: #ccc;
+}
+
+textarea {
+  min-height: 120px;
+  resize: none;
+}
+
+button[type="submit"] {
+  background-color: var(--Primary-Color);
+  color: white;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  margin: 20px;
+  font-weight: 600;
+  transition: background 0.3s;
+}
+
+button[type="submit"]:hover {
+  background-color: #e68a00;
+}
+
+.info-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-top: 10px;
+}
+
+.info-box {
+  background-color: #fcfcfd;
+  border: 1px solid #eee;
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+}
+
+.info-box img {
+  margin: 10px;
+  padding: 10px;
+  color: #f7f7f8;
+  border: 1px solid #f1f1f3;
+}
+
+.info-box p {
+  margin: 0;
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 10px;
+}
